// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkAccordionItem should not render an "initiallyExpanded" attribute on the html node 1`] = `
<DocumentFragment>
  <div
    id="my-accordion"
  >
    <dt
      class="bpk-accordion__title bpk-accordion__title--collapsed"
    >
      <button
        aria-controls="my-accordion_content"
        aria-expanded="false"
        class="bpk-accordion__toggle-button"
        type="button"
      >
        <span
          class="bpk-accordion__flex-container"
        >
          <span
            class="bpk-text bpk-text--body-default bpk-accordion__title-text"
          >
            My accordion item
          </span>
          <span
            class="bpk-accordion__icon-wrapper"
          >
            <span
              style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
            >
              <svg
                class="bpk-accordion__item-expand-icon"
                height="16"
                style="width: 1rem; height: 1rem;"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19.113 8.095a1.496 1.496 0 010 2.008l-6.397 5.948a1 1 0 01-1.358.003l-6.532-6.01a1.427 1.427 0 01.138-1.949 1.572 1.572 0 011.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 012.104 0z"
                />
              </svg>
            </span>
          </span>
        </span>
      </button>
    </dt>
    <dd
      class="bpk-accordion__content-container"
      id="my-accordion_content"
    >
      <div
        style="height: 0px; overflow: hidden; transition: height 200ms ease;"
      >
        <div
          style="display: none;"
        >
          My accordion content
        </div>
      </div>
    </dd>
  </div>
</DocumentFragment>
`;

exports[`BpkAccordionItem should render correctly 1`] = `
<DocumentFragment>
  <div
    id="my-accordion"
  >
    <dt
      class="bpk-accordion__title bpk-accordion__title--collapsed"
    >
      <button
        aria-controls="my-accordion_content"
        aria-expanded="false"
        class="bpk-accordion__toggle-button"
        type="button"
      >
        <span
          class="bpk-accordion__flex-container"
        >
          <span
            class="bpk-text bpk-text--body-default bpk-accordion__title-text"
          >
            My accordion item
          </span>
          <span
            class="bpk-accordion__icon-wrapper"
          >
            <span
              style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
            >
              <svg
                class="bpk-accordion__item-expand-icon"
                height="16"
                style="width: 1rem; height: 1rem;"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19.113 8.095a1.496 1.496 0 010 2.008l-6.397 5.948a1 1 0 01-1.358.003l-6.532-6.01a1.427 1.427 0 01.138-1.949 1.572 1.572 0 011.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 012.104 0z"
                />
              </svg>
            </span>
          </span>
        </span>
      </button>
    </dt>
    <dd
      class="bpk-accordion__content-container"
      id="my-accordion_content"
    >
      <div
        style="height: 0px; overflow: hidden; transition: height 200ms ease;"
      >
        <div
          style="display: none;"
        >
          My accordion content
        </div>
      </div>
    </dd>
  </div>
</DocumentFragment>
`;

exports[`BpkAccordionItem should render correctly with "className" prop 1`] = `
<DocumentFragment>
  <div
    class="my-custom-class"
    id="my-accordion"
  >
    <dt
      class="bpk-accordion__title bpk-accordion__title--collapsed"
    >
      <button
        aria-controls="my-accordion_content"
        aria-expanded="false"
        class="bpk-accordion__toggle-button"
        type="button"
      >
        <span
          class="bpk-accordion__flex-container"
        >
          <span
            class="bpk-text bpk-text--body-default bpk-accordion__title-text"
          >
            My accordion item
          </span>
          <span
            class="bpk-accordion__icon-wrapper"
          >
            <span
              style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
            >
              <svg
                class="bpk-accordion__item-expand-icon"
                height="16"
                style="width: 1rem; height: 1rem;"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19.113 8.095a1.496 1.496 0 010 2.008l-6.397 5.948a1 1 0 01-1.358.003l-6.532-6.01a1.427 1.427 0 01.138-1.949 1.572 1.572 0 011.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 012.104 0z"
                />
              </svg>
            </span>
          </span>
        </span>
      </button>
    </dt>
    <dd
      class="bpk-accordion__content-container"
      id="my-accordion_content"
    >
      <div
        style="height: 0px; overflow: hidden; transition: height 200ms ease;"
      >
        <div
          style="display: none;"
        >
          My accordion content
        </div>
      </div>
    </dd>
  </div>
</DocumentFragment>
`;

exports[`BpkAccordionItem should render correctly with "expanded" prop 1`] = `
<DocumentFragment>
  <div
    id="my-accordion"
  >
    <dt
      class="bpk-accordion__title"
    >
      <button
        aria-controls="my-accordion_content"
        aria-expanded="true"
        class="bpk-accordion__toggle-button"
        type="button"
      >
        <span
          class="bpk-accordion__flex-container"
        >
          <span
            class="bpk-text bpk-text--body-default bpk-accordion__title-text"
          >
            My accordion item
          </span>
          <span
            class="bpk-accordion__icon-wrapper"
          >
            <span
              style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
            >
              <svg
                class="bpk-accordion__item-expand-icon bpk-accordion__item-expand-icon--flipped"
                height="16"
                style="width: 1rem; height: 1rem;"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19.113 8.095a1.496 1.496 0 010 2.008l-6.397 5.948a1 1 0 01-1.358.003l-6.532-6.01a1.427 1.427 0 01.138-1.949 1.572 1.572 0 011.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 012.104 0z"
                />
              </svg>
            </span>
          </span>
        </span>
      </button>
    </dt>
    <dd
      class="bpk-accordion__content-container bpk-accordion__content-container--expanded"
      id="my-accordion_content"
    >
      <div
        style="height: auto; overflow: visible; transition: height 200ms ease;"
      >
        <div>
          My accordion content
        </div>
      </div>
    </dd>
  </div>
</DocumentFragment>
`;

exports[`BpkAccordionItem should render correctly with "tagName" prop set 1`] = `
<DocumentFragment>
  <div
    id="my-accordion"
  >
    <dt
      class="bpk-accordion__title bpk-accordion__title--collapsed"
    >
      <button
        aria-controls="my-accordion_content"
        aria-expanded="false"
        class="bpk-accordion__toggle-button"
        type="button"
      >
        <span
          class="bpk-accordion__flex-container"
        >
          <h3
            class="bpk-text bpk-text--body-default bpk-accordion__title-text"
          >
            My accordion item
          </h3>
          <span
            class="bpk-accordion__icon-wrapper"
          >
            <span
              style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
            >
              <svg
                class="bpk-accordion__item-expand-icon"
                height="16"
                style="width: 1rem; height: 1rem;"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19.113 8.095a1.496 1.496 0 010 2.008l-6.397 5.948a1 1 0 01-1.358.003l-6.532-6.01a1.427 1.427 0 01.138-1.949 1.572 1.572 0 011.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 012.104 0z"
                />
              </svg>
            </span>
          </span>
        </span>
      </button>
    </dt>
    <dd
      class="bpk-accordion__content-container"
      id="my-accordion_content"
    >
      <div
        style="height: 0px; overflow: hidden; transition: height 200ms ease;"
      >
        <div
          style="display: none;"
        >
          My accordion content
        </div>
      </div>
    </dd>
  </div>
</DocumentFragment>
`;

exports[`BpkAccordionItem should render correctly with "textStyle" prop set 1`] = `
<DocumentFragment>
  <div
    id="my-accordion"
  >
    <dt
      class="bpk-accordion__title bpk-accordion__title--collapsed"
    >
      <button
        aria-controls="my-accordion_content"
        aria-expanded="false"
        class="bpk-accordion__toggle-button"
        type="button"
      >
        <span
          class="bpk-accordion__flex-container"
        >
          <span
            class="bpk-text bpk-text--xl bpk-accordion__title-text"
          >
            My accordion item
          </span>
          <span
            class="bpk-accordion__icon-wrapper"
          >
            <span
              style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
            >
              <svg
                class="bpk-accordion__item-expand-icon"
                height="16"
                style="width: 1rem; height: 1rem;"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19.113 8.095a1.496 1.496 0 010 2.008l-6.397 5.948a1 1 0 01-1.358.003l-6.532-6.01a1.427 1.427 0 01.138-1.949 1.572 1.572 0 011.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 012.104 0z"
                />
              </svg>
            </span>
          </span>
        </span>
      </button>
    </dt>
    <dd
      class="bpk-accordion__content-container"
      id="my-accordion_content"
    >
      <div
        style="height: 0px; overflow: hidden; transition: height 200ms ease;"
      >
        <div
          style="display: none;"
        >
          My accordion content
        </div>
      </div>
    </dd>
  </div>
</DocumentFragment>
`;

exports[`BpkAccordionItem should render correctly with an icon set 1`] = `
<DocumentFragment>
  <div
    id="my-accordion"
  >
    <dt
      class="bpk-accordion__title bpk-accordion__title--collapsed"
    >
      <button
        aria-controls="my-accordion_content"
        aria-expanded="false"
        class="bpk-accordion__toggle-button"
        type="button"
      >
        <span
          class="bpk-accordion__flex-container"
        >
          <span
            class="bpk-text bpk-text--body-default bpk-accordion__title-text"
          >
            <svg
              class="bpk-accordion__leading-icon"
              height="16"
              style="width: 1rem; height: 1rem;"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.25 7.5a2.25 2.25 0 100-4.5 2.25 2.25 0 000 4.5zm-3.588-.866a1.5 1.5 0 01-.358 2.09C5.597 9.933 4.5 11.89 4.5 14.092V19.5a1.5 1.5 0 11-3 0v-5.41c0-3.227 1.614-6.076 4.071-7.814a1.5 1.5 0 012.091.358zm7.176 0a1.5 1.5 0 012.09-.359C19.387 8.014 21 10.864 21 14.091v1.788l.44-.44a1.5 1.5 0 012.12 2.122l-3 3a1.5 1.5 0 01-2.12 0l-3-3a1.5 1.5 0 012.12-2.122l.44.44V14.09c0-2.201-1.097-4.159-2.804-5.366a1.5 1.5 0 01-.358-2.091z"
              />
            </svg>
            My accordion item
          </span>
          <span
            class="bpk-accordion__icon-wrapper"
          >
            <span
              style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
            >
              <svg
                class="bpk-accordion__item-expand-icon"
                height="16"
                style="width: 1rem; height: 1rem;"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19.113 8.095a1.496 1.496 0 010 2.008l-6.397 5.948a1 1 0 01-1.358.003l-6.532-6.01a1.427 1.427 0 01.138-1.949 1.572 1.572 0 011.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 012.104 0z"
                />
              </svg>
            </span>
          </span>
        </span>
      </button>
    </dt>
    <dd
      class="bpk-accordion__content-container"
      id="my-accordion_content"
    >
      <div
        style="height: 0px; overflow: hidden; transition: height 200ms ease;"
      >
        <div
          style="display: none;"
        >
          My accordion content
        </div>
      </div>
    </dd>
  </div>
</DocumentFragment>
`;

exports[`BpkAccordionItem should render correctly with onDark set 1`] = `
<DocumentFragment>
  <div
    id="my-accordion"
  >
    <dt
      class="bpk-accordion__title bpk-accordion__title--collapsed-on-dark"
    >
      <button
        aria-controls="my-accordion_content"
        aria-expanded="false"
        class="bpk-accordion__toggle-button"
        type="button"
      >
        <span
          class="bpk-accordion__flex-container"
        >
          <span
            class="bpk-text bpk-text--body-default bpk-accordion__title-text bpk-accordion__title-text--on-dark"
          >
            My accordion item
          </span>
          <span
            class="bpk-accordion__icon-wrapper"
          >
            <span
              style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
            >
              <svg
                class="bpk-accordion__item-expand-icon bpk-accordion__item-expand-icon--on-dark"
                height="16"
                style="width: 1rem; height: 1rem;"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19.113 8.095a1.496 1.496 0 010 2.008l-6.397 5.948a1 1 0 01-1.358.003l-6.532-6.01a1.427 1.427 0 01.138-1.949 1.572 1.572 0 011.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 012.104 0z"
                />
              </svg>
            </span>
          </span>
        </span>
      </button>
    </dt>
    <dd
      class="bpk-accordion__content-container"
      id="my-accordion_content"
    >
      <div
        style="height: 0px; overflow: hidden; transition: height 200ms ease;"
      >
        <div
          style="display: none;"
        >
          My accordion content
        </div>
      </div>
    </dd>
  </div>
  ,
</DocumentFragment>
`;
